Kinda fix the white screen problem on iphone

--- a/client/modules/About/About.scss
+++ b/client/modules/About/About.scss
@@ -17,7 +17,7 @@ $img-width: 960px;
 	height: 100%;
 	width: 100%;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   .section {
     padding-bottom: 30px;
