--- a/client/modules/Challenges/Challenges.scss
+++ b/client/modules/Challenges/Challenges.scss
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
 
-  overflow-x: hidden;
+  // overflow-x: hidden;
 
   .info {
     width: 80%;
