--- a/client/modules/GetInvolved/GetInvolved.scss
+++ b/client/modules/GetInvolved/GetInvolved.scss
@@ -3,7 +3,7 @@
 .get-involved {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   .gridStyle {
     text-align: left;
   }
@@ -21,7 +21,7 @@
     vertical-align: bottom;
 
     .boxWrapper {
-      height: 100%; 
+      height: 100%;
       display: flex;
 
       .boxContent{
@@ -32,7 +32,7 @@
           width: $icon-dim;
           height: $icon-dim;
           margin-bottom: 40px;
-        }  
+        }
 
         div {
           position: absolute;
